--- a/index.html
+++ b/index.html
@@ -318,13 +318,18 @@
             <h2>Fully-Visualization</h2>
             <p class="information-text">This approach eliminates the inefficiencies of manual rework and dense command logs, empowering designers to explore alternative design decisions, reduce overhead, and streamline collaboration—all without requiring proprietary BIM software or licenses.</p>
             <div id = "fully-target"></div>
+            <div id="fully-slider-target">
+                <input type="range" id="fully-slider">
+            </div>
         </section>
 
         <section id="Partially-Visualization">
             <h2>Partially-Visualization</h2>
             <p class="information-text">This approach eliminates the inefficiencies of manual rework and dense command logs, empowering designers to explore alternative design decisions, reduce overhead, and streamline collaboration—all without requiring proprietary BIM software or licenses.</p>
             <div id="partially-target"></div>
-        
+            <div id="partially-slider">
+                <input type="range">
+            </div>
         </section>
 
         <section id="Design-Patching">
