--- a/index.html
+++ b/index.html
@@ -355,6 +355,7 @@
         import { main } from './src/script/main.js';
         document.addEventListener("DOMContentLoaded", () => {
             main("fully-target");
+            main("partially-target");
         });
     </script>
     
