--- a/index.html
+++ b/index.html
@@ -353,6 +353,7 @@
 
     <script type="module">
         import { main } from './src/script/main.js';
+        console.log("엥");
         document.addEventListener("DOMContentLoaded", () => {
             main("fully-target");
             main("partially-target");
