--- a/index.html
+++ b/index.html
@@ -334,7 +334,13 @@
         <section id="Partially-Visualization">
             <h2>Partially-Visualization</h2>
             <p class="information-text">This approach eliminates the inefficiencies of manual rework and dense command logs, empowering designers to explore alternative design decisions, reduce overhead, and streamline collaboration—all without requiring proprietary BIM software or licenses.</p>
+            
             <div id="partially-target"></div>
+            <div id="p-button-container">
+                <button class="partial-button">Inside</button>
+                <button class="partial-button">Outside</button>
+            </div>
+            
 
             <div id="partially-slider-target">
                 <input type="range" id="partially-slider" class="slider">
