--- a/index.html
+++ b/index.html
@@ -337,8 +337,8 @@
             
             <div id="partially-target"></div>
             <div id="p-button-container">
-                <button class="partial-button">Inside</button>
-                <button class="partial-button">Outside</button>
+                <button class="partial-button Visible" id="inside-button">Inside</button>
+                <button class="partial-button" id="outside-button">Outside</button>
             </div>
             
 
