--- a/index.html
+++ b/index.html
@@ -339,6 +339,7 @@
             <div id="p-button-container">
                 <button class="partial-button Visible" id="inside-button">Inside</button>
                 <button class="partial-button" id="outside-button">Outside</button>
+                <button class="partial-button" id="plane-button">Plane</button>
             </div>
             
 
