--- a/index.html
+++ b/index.html
@@ -326,7 +326,8 @@
             <section class="accordion-section">
                 <button class="accordion-toggle">▼ Click to Toggle Section</button>
                 <div class="accordion-content">
-                    <h1>This is the collapsible content. You can put text, images, or any HTML here.</h1>
+                    <h1>Quantity Take Off</h1>
+                    <div class="info-target" id="info-target"></div>
                 </div>
             </section>
         </section>
