--- a/index.html
+++ b/index.html
@@ -326,8 +326,14 @@
             <section class="accordion-section">
                 <button class="accordion-toggle">▼ Click to Toggle Section</button>
                 <div class="accordion-content">
-                    <h1>Quantity Take Off</h1>
-                    <div class="info-target" id="info-target"></div>
+                    <div id="qto-div" class="info-div">
+                        <h1>Quantity Take Off</h1>
+                        <div class="info-target" id="info-target"></div>
+                    </div>
+                    <div id="element-div" class="info-div">
+                        <h1>Selected Element Properties</h1>
+                        <div class="element-target" id="element-target"></div>
+                    </div>
                 </div>
             </section>
         </section>
