--- a/index.html
+++ b/index.html
@@ -327,11 +327,11 @@
                 <button class="accordion-toggle">▼ Click to Toggle Section</button>
                 <div class="accordion-content">
                     <div id="qto-div" class="info-div">
-                        <h1>Quantity Take Off</h1>
+                        <h1 class="info-title">Quantity Take Off</h1>
                         <div class="info-target" id="info-target"></div>
                     </div>
                     <div id="element-div" class="info-div">
-                        <h1>Selected Element Properties</h1>
+                        <h1 class="info-title">Selected Element Properties</h1>
                         <div class="element-target" id="element-target"></div>
                     </div>
                 </div>
