--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Design Patching in BIM</title>
+    <link rel="icon" type="image/png" href="./하마2.png">
     <link rel="stylesheet" href="style.css">
 
     <script src="https://pfau-software.de/json-viewer/dist/iife/index.js"></script>
