--- a/index.html
+++ b/index.html
@@ -316,7 +316,10 @@
         </section>
 
         <section id="Full-Visualization">
-            <h2>Fully-Visualization</h2>
+            <div>
+                <h2 class="visual-title">Fully-Visualization</h2>
+                <button id="fully-demo" class="demo" onclick="window.location.href='https://leejunghun1234.github.io/FullyVisualization/'">Go To Demo Site</button>
+            </div>
             <p class="information-text">This approach eliminates the inefficiencies of manual rework and dense command logs, empowering designers to explore alternative design decisions, reduce overhead, and streamline collaboration—all without requiring proprietary BIM software or licenses.</p>
             <div id = "fully-target"></div>
 
@@ -340,7 +343,10 @@
         </section>
 
         <section id="Partially-Visualization">
-            <h2>Partially-Visualization</h2>
+            <div>
+                <h2 class="visual-title">Partially-Visualization</h2>
+                <button id="partially-demo" class="demo" onclick="window.location.href='https://leejunghun1234.github.io/PartiallyVisualization/'">Go To Demo Site</button>
+            </div>
             <p class="information-text">This approach eliminates the inefficiencies of manual rework and dense command logs, empowering designers to explore alternative design decisions, reduce overhead, and streamline collaboration—all without requiring proprietary BIM software or licenses.</p>
             
             <div id="partially-target"></div>
